--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   google_fonts: ^6.1.0
   sleek_circular_slider: ^2.0.1
   sqflite: any
+  path_provider: any
   path: any
+
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +56,9 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/data.json
     - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
